--- a/static/index.html
+++ b/static/index.html
@@ -1,22 +1,124 @@
-<!doctype html>
-<html xmlns="http://www.w3.org/1999/xhtml" >
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <title>Deliver Now</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
-    <link rel='shortcut icon' type='image/x-icon' href='/favicon/favicon.ico' />
-
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+  <meta charset="UTF-8">
+  <title>Bill Li</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-  <div class="topContainer">
-    <h1>Placeholder Domain</h1>
-    <p>Hosted on Amazon S3!</p>
-  </div>
+  <div class="mainlayout">
+  <header class="title">
+      <h2> Bill Li </h2>
+  </header>
+
+  <section class="strips">
+    <article class="strips__strip">
+      <div class="strip__content">
+        <h1 class="strip__title" data-name="Lorem">Resume</h1>
+        <div class="strip__inner-text">
+          <h2>Resume</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia sapiente deserunt consectetur, quod reiciendis corrupti quo ea aliquid! Repellendus numquam quo, voluptate. Suscipit soluta omnis quibusdam facilis, illo voluptates odit!
+          </p>
+          <img src="resume/myCv.png"></img>
+          <p>
+            <a href="https://s3-ap-southeast-2.amazonaws.com/delivernow.co.nz/resume/Bill_Li_CV.pdf" target="_blank"><i class="fa fa-download"></i></a>
+          </p>
+        </div>
+      </div>
+    </article>
+    <article class="strips__strip">
+      <div class="strip__content">
+        <h1 class="strip__title" data-name="Ipsum">Projects</h1>
+        <div class="strip__inner-text">
+          <h2>Projects</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia sapiente deserunt consectetur, quod reiciendis corrupti quo ea aliquid! Repellendus numquam quo, voluptate. Suscipit soluta omnis quibusdam facilis, illo voluptates odit!
+          </p>
+          <p>
+            <a href="https://twitter.com/ettrics" target="_blank"><i class="fa fa-github"></i></a>
+          </p>
+        </div>
+      </div>
+    </article>
+    <article class="strips__strip">
+      <div class="strip__content">
+        <h1 class="strip__title" data-name="Dolor">My Story</h1>
+        <div class="strip__inner-text">
+          <h2>My Story</h2>
+          <p>
+            <a href="https://twitter.com/ettrics" target="_blank"><i class="fa fa-user"></i></a>
+          </p>
+        </div>
+      </div>
+    </article>
+    <article class="strips__strip">
+      <div class="strip__content">
+        <h1 class="strip__title" data-name="Sit">Apps</h1>
+        <div class="strip__inner-text">
+          <h2>Apps</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia sapiente deserunt consectetur, quod reiciendis corrupti quo ea aliquid! Repellendus numquam quo, voluptate. Suscipit soluta omnis quibusdam facilis, illo voluptates odit!
+          </p>
+          <p>
+            <a href="https://twitter.com/ettrics" target="_blank"><i class="fa fa-twitter"></i></a>
+          </p>
+        </div>
+      </div>
+    </article>
+    <article class="strips__strip">
+      <div class="strip__content">
+        <h1 class="strip__title" data-name="Amet">Tech Stack</h1>
+        <div class="strip__inner-text">
+          <div class="wrapper">
+
+        	<header>
+        	  <h1>My Stack</h1>
+        	</header>
+
+        	<section class="columns">
+
+        	  <div class="column">
+        	    <h2>1st Content Area</h2>
+        	    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ratione architecto necessitatibus cum praesentium dolor totam voluptatibus recusandae?</p>
+        	  </div>
+
+        	  <div class="column">
+        	    <h2>2nd Content Area</h2>
+        	    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ratione architecto necessitatibus cum praesentium dolor totam voluptatibus recusandae? Illo quod nemo ratione itaque dolores laudantium error vero laborum blanditiis nostrum.</p>
+        	  </div>
+
+        	  <div class="column">
+        	    <h2>3rd Content Area</h2>
+        	    <p>Illo quod nemo ratione itaque dolores laudantium error vero laborum blanditiis nostrum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ratione architecto cum praesentium voluptatibus recusandae?</p>
+        	  </div>
+
+        	</section>
+
+        	<footer>
+        	  <h3>Footer</h3>
+        	  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam, porro. Doloribus vitae non dolores modi dolorum commodi perspiciatis dicta nostrum minus esse, totam officia, quibusdam amet quas tempora? Voluptatibus, esse.</p>
+        	</footer>
+
+        	</div>
+          <p>
+            <a href="https://twitter.com/ettrics" target="_blank"><i class="fa fa-align-justify"></i></a>
+          </p>
+        </div>
+      </div>
+    </article>
+    <i class="fa fa-close strip__close"></i>
+  </section>
+
+  <section class="footer">
+
+  </section>
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+  <script src="js/index.js"></script>
+</div>
 </body>
 
 </html>
