--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
     />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"
+    />
+    <link
       href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
       rel="stylesheet"
     />
