Add social media thumbnail meta properties

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,9 @@
       sizes="76x76"
       href="%PUBLIC_URL%/apple-icon.png"
     />
+    <!-- Social Media -->
+    <meta property="og:title" content="Secret Hideout">
+    <meta property="og:image" content="https://s3-ap-southeast-2.amazonaws.com/beel.dev.cdn/social-media-thumbail.png">
     <!--     Fonts and icons     -->
     <link
       rel="stylesheet"
